<resources>
    <string name="app_name">LoveForMe</string>

    <!-- Strings related to login -->
    <!--login action (登陆页面)-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--main_activity-->
    <string name="action_navigation_original">组织</string>
    <string name="action_navigation_other">更多</string>
    <string name="action_settings">设置</string>


</resources>
